# ComfyUI-Krish-RBAC

./: .gitignore  CHANGELOG.md  EXTENSION_TABS_API.md  README.md  __init__.py  api.py  config.json  conftest.py  constants.py  prestartup_script.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: publish.yml
Templates/: README.md
readme/: API_USAGE.md  CHANGELOG.md
routes/: admin.py  auth.py  user.py  workflow_routes.py
tests/: conftest.py  pyproject.toml  test_bulk_users.py  test_jwt.py  test_workflow_helpers.py  test_workflow_run_log.py
users/: usgromana_groups.json
users/defaults/: default_group_config.json  default_ui_defaults.json
users/jdallen/workflows/: AnimeGirl.json  BATMAN!.json  BATMAN2!.json  BalconyPose_PinkHair.json  Balcony_PinkHair.json  Bar-DrunkDemon.json  (+50 more)
utils/: __init__.py  access_control.py  asyncio_client_disconnect.py  audit_log.py  bootstrap.py  bulk_users.py  comfy_user_bridge.py  config.py  enable_comfy_assets.py  ip_filter.py  json_utils.py  jwt_auth.py  media_paths.py  nsfw_media_filter.py  presence.py  runtime_config.py  sanitizer.py  session_store.py  timeout.py  ui_defaults.py  users_db.py  users_storage.py  workflow_run_log.py
utils/sfw_intercept/: node_interceptor.py  nsfw_guard.py  reactor_sfw_intercept.py
web/: floating_button.js  usgromana_settings.js
web/html/: change_password.html  generate_token.html  login.html  register.html
web/js/: auth.js  comfy_imports.js  comfy_user_bridge.js  denial_toasts.js  injectCSS.js  logout.js  workflow_run_tracker.js
