[project]
name = "ComfyUI-Usgromana"
description = "The next-generation security, governance, permissions, and multi‑user login control system for ComfyUI. Extension implements login, multi-user registration, user group management, ui management, group workflow management, SFW user management, IP filtering, and user-specific input/output workflow directories, and more."
version = "2.0.0"
license = {file = "LICENSE"} 

dependencies = ["aiohttp", "PyJWT", "bcrypt", "bleach", "transformers", "torch", "pillow", "numpy", "piexif"]

[project.urls]
Repository = "https://github.com/DayMan84/ComfyUI-Usgromana"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DayMan84/ComfyUI-Usgromana/wiki"
"Bug Tracker" = "https://github.com/DayMan84/ComfyUI-Usgromana/issues"

[tool.comfy]
PublisherId = "dayman84"
DisplayName = "ComfyUI-Usgromana"
Icon = "https://raw.githubusercontent.com/DayMan84/ComfyUI-Usgromana/refs/heads/main/web/assets/dark_logo_transparent.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
